--- a/index.html
+++ b/index.html
@@ -207,8 +207,7 @@
                     <a href="https://www.linkedin.com/in/jacobmolenick" target="_blank" class="cta-button">Connect on LinkedIn</a>
                 </div>
                 <div class="contact-image">
-                    <img src="mentorship.jpg" alt="Jacob Olenick" class="contact-img-main">
-                    <img src="mentor1.png" alt="Jacob Olenick Secondary" class="contact-img-overlay">
+                    <img src="mentor1.png" alt="Jacob Olenick" class="contact-img-overlay">
                 </div>
             </div>
         </section>
